Splitted the dataset into train and test data

--- a/students_admissions_keras.ipynb
+++ b/students_admissions_keras.ipynb
@@ -640,11 +640,65 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Splitting the data into Training and Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to test our algorithm, we have to split the data into a training and a testing set. The size of the testing set will be 10% of the total data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training samples is 360\n",
+      "Number of testing samples is 40\n",
+      "     admit    gre     gpa  rank_1  rank_2  rank_3  rank_4\n",
+      "221      0  0.850  0.9975       0       0       1       0\n",
+      "261      0  0.550  0.7875       0       1       0       0\n",
+      "370      1  0.675  0.9425       0       1       0       0\n",
+      "384      1  0.600  0.6550       0       1       0       0\n",
+      "349      0  0.775  0.7125       0       1       0       0\n",
+      "339      1  0.825  0.8675       0       0       1       0\n",
+      "312      0  0.825  0.9425       0       0       1       0\n",
+      "115      0  0.775  0.9975       0       0       1       0\n",
+      "163      0  0.650  0.6825       0       1       0       0\n",
+      "129      0  0.575  0.7875       0       0       0       1\n",
+      "    admit    gre     gpa  rank_1  rank_2  rank_3  rank_4\n",
+      "1       1  0.825  0.9175       0       0       1       0\n",
+      "11      0  0.550  0.8050       1       0       0       0\n",
+      "12      1  0.950  1.0000       1       0       0       0\n",
+      "16      0  0.975  0.9675       0       0       0       1\n",
+      "18      0  1.000  0.9375       0       1       0       0\n",
+      "34      0  0.450  0.7850       1       0       0       0\n",
+      "37      0  0.650  0.7250       0       0       1       0\n",
+      "67      0  0.775  0.8250       1       0       0       0\n",
+      "72      0  0.600  0.8475       0       0       0       1\n",
+      "83      0  0.475  0.7275       0       0       0       1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split the data\n",
+    "sample = np.random.choice(processed_data.index, size=int(len(processed_data)*0.9), replace=False)\n",
+    "train_data, test_data = processed_data.iloc[sample], processed_data.drop(sample)\n",
+    "\n",
+    "print(\"Number of training samples is\", len(train_data))\n",
+    "print(\"Number of testing samples is\", len(test_data))\n",
+    "print(train_data[:10])\n",
+    "print(test_data[:10])"
+   ]
   },
   {
    "cell_type": "code",
