--- a/students_admissions_keras.ipynb
+++ b/students_admissions_keras.ipynb
@@ -882,6 +882,39 @@
     "# training the model\n",
     "model.fit(features, targets, epochs=200, batch_size=100, verbose=0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluating the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "360/360 [==============================] - 0s 75us/step\n",
+      "\n",
+      " Training Accuracy: 0.7083333333333334\n",
+      "40/40 [==============================] - 0s 226us/step\n",
+      "\n",
+      " Testing Accuracy: 0.675\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluating the model on the training and testing set\n",
+    "score = model.evaluate(features, targets)\n",
+    "print(\"\\n Training Accuracy:\", score[1])\n",
+    "score = model.evaluate(features_test, targets_test)\n",
+    "print(\"\\n Testing Accuracy:\", score[1])"
+   ]
   }
  ],
  "metadata": {
