trained and evaluated a new model with increased size of the layers

--- a/students_admissions_keras.ipynb
+++ b/students_admissions_keras.ipynb
@@ -915,6 +915,116 @@
     "score = model.evaluate(features_test, targets_test)\n",
     "print(\"\\n Testing Accuracy:\", score[1])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We made several decisions in our training. For instance, the number of layers, the sizes of the layers, the number of epochs, etc. Is it possible to improve the accuracy even further? Let's explore. In order to do that we have to make changes in the following parameters:\n",
+    "\n",
+    "* Activation function: relu and sigmoid\n",
+    "* Loss function: categorical_crossentropy, mean_squared_error\n",
+    "* Optimizer: rmsprop, adam, ada\n",
+    "\n",
+    "We can also tweak other parameters, such as, the number of layers, the sizes of the layers, the number of epochs, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, let's increase the number of nodes in the input and the hidden layer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_7 (Dense)              (None, 256)               1792      \n",
+      "_________________________________________________________________\n",
+      "dropout_5 (Dropout)          (None, 256)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_8 (Dense)              (None, 128)               32896     \n",
+      "_________________________________________________________________\n",
+      "dropout_6 (Dropout)          (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_9 (Dense)              (None, 2)                 258       \n",
+      "=================================================================\n",
+      "Total params: 34,946\n",
+      "Trainable params: 34,946\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# building the model\n",
+    "model = Sequential()\n",
+    "model.add(Dense(256, activation='relu', input_shape=(6,))) # input layer nodes doubled from 128 to 256\n",
+    "model.add(Dropout(.2))\n",
+    "model.add(Dense(128, activation='relu'))    # hidden layer nodes doubled from 64 to 128\n",
+    "model.add(Dropout(.1))\n",
+    "model.add(Dense(2, activation='softmax'))\n",
+    "\n",
+    "# compiling the model\n",
+    "model.compile(loss = 'categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x617aac7978>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# training the model\n",
+    "model.fit(features, targets, epochs=200, batch_size=100, verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "360/360 [==============================] - 0s 925us/step\n",
+      "\n",
+      " Training Accuracy: 0.7166666666666667\n",
+      "40/40 [==============================] - 0s 250us/step\n",
+      "\n",
+      " Testing Accuracy: 0.675\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluating the model on the training and testing set\n",
+    "score = model.evaluate(features, targets)\n",
+    "print(\"\\n Training Accuracy:\", score[1])\n",
+    "score = model.evaluate(features_test, targets_test)\n",
+    "print(\"\\n Testing Accuracy:\", score[1])"
+   ]
   }
  ],
  "metadata": {
