trained and evaluated after tweaking the previous model

--- a/students_admissions_keras.ipynb
+++ b/students_admissions_keras.ipynb
@@ -1025,6 +1025,117 @@
     "score = model.evaluate(features_test, targets_test)\n",
     "print(\"\\n Testing Accuracy:\", score[1])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model performs better in terms of training accuracy while testing accuracy remains the same."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's change the input layer activation from relu to sigmoid and use rmsprop as an optimizer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_17 (Dense)             (None, 256)               1792      \n",
+      "_________________________________________________________________\n",
+      "dropout_12 (Dropout)         (None, 256)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_18 (Dense)             (None, 128)               32896     \n",
+      "_________________________________________________________________\n",
+      "dropout_13 (Dropout)         (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_19 (Dense)             (None, 2)                 258       \n",
+      "=================================================================\n",
+      "Total params: 34,946\n",
+      "Trainable params: 34,946\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# building the model\n",
+    "model = Sequential()\n",
+    "model.add(Dense(256, activation='sigmoid', input_shape=(6,))) # changed activtion to sigmoid\n",
+    "model.add(Dropout(.2))\n",
+    "model.add(Dense(128, activation='relu'))    \n",
+    "model.add(Dropout(.1))\n",
+    "model.add(Dense(2, activation='softmax'))\n",
+    "\n",
+    "# compiling the model\n",
+    "model.compile(loss = 'categorical_crossentropy', optimizer='rmsprop', metrics=['accuracy']) # using rmsprop\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x617fa02f28>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# training the model\n",
+    "model.fit(features, targets, epochs=200, batch_size=100, verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "360/360 [==============================] - 1s 1ms/step\n",
+      "\n",
+      " Training Accuracy: 0.6944444444444444\n",
+      "40/40 [==============================] - 0s 391us/step\n",
+      "\n",
+      " Testing Accuracy: 0.575\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluating the model on the training and testing set\n",
+    "score = model.evaluate(features, targets)\n",
+    "print(\"\\n Training Accuracy:\", score[1])\n",
+    "score = model.evaluate(features_test, targets_test)\n",
+    "print(\"\\n Testing Accuracy:\", score[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this configuration, the models suffers loss of performance in both training as well as testing acccuracy. There is a significant drop in the performance of the testing accuracy."
+   ]
   }
  ],
  "metadata": {
