--- a/students_admissions_keras.ipynb
+++ b/students_admissions_keras.ipynb
@@ -1192,6 +1192,60 @@
     "model.compile(loss = 'categorical_crossentropy', optimizer='adam', metrics=['accuracy']) # using rmsprop\n",
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x6101568b00>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# training the model\n",
+    "model.fit(features, targets, epochs=200, batch_size=10, verbose=0) # changed the batch size to 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "360/360 [==============================] - 1s 2ms/step\n",
+      "\n",
+      " Training Accuracy: 0.7083333333333334\n",
+      "40/40 [==============================] - 0s 0us/step\n",
+      "\n",
+      " Testing Accuracy: 0.65\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluating the model on the training and testing set\n",
+    "score = model.evaluate(features, targets)\n",
+    "print(\"\\n Training Accuracy:\", score[1])\n",
+    "score = model.evaluate(features_test, targets_test)\n",
+    "print(\"\\n Testing Accuracy:\", score[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model perform a lot better after making changes to the previous architecture."
+   ]
   }
  ],
  "metadata": {
